# OpenMax

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  run_demo.py  train.ipynb
examples/: benchmark.py  training_loop.py
hypothesis_engine/: __init__.py  curriculum.py  display.py  env.py  gym_wrapper.py  openenv_wrapper.py  rewards.py  self_play.py  verifier.py  worlds.py
hypothesis_engine/agents/: __init__.py  base.py  heuristic_agent.py  llm_agent.py
