[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypothesis-engine"
version = "2.0.0"
description = "A procedurally-generated scientific discovery RL environment for training LLM reasoning -- with causal discovery, physics simulation, state machines, and adversarial self-play"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Hypothesis Engine Team"},
]
keywords = [
    "reinforcement-learning",
    "rl-environment",
    "llm-training",
    "scientific-reasoning",
    "gymnasium",
    "hypothesis-testing",
    "procedural-generation",
    "causal-reasoning",
    "self-play",
    "physics-simulation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "openenv-core>=0.2.1",
]

[project.optional-dependencies]
gymnasium = ["gymnasium>=0.29.0"]
llm = ["openai>=1.0.0"]
training = ["trl>=0.12.0", "unsloth", "transformers", "datasets"]
all = ["gymnasium>=0.29.0", "openai>=1.0.0", "openenv-core>=0.2.1"]
dev = ["pytest", "gymnasium>=0.29.0", "openai>=1.0.0"]

[project.urls]
Homepage = "https://github.com/AbhinavDubey30/OpenMax"
Documentation = "https://github.com/AbhinavDubey30/OpenMax#readme"
Issues = "https://github.com/AbhinavDubey30/OpenMax/issues"

[tool.setuptools.packages.find]
include = ["hypothesis_engine*"]
